# fabricaClass_backEnd

./: .gitignore  README.md  pyproject.toml  requirements.txt
EnvioEmails/: apps.py  views.py
FabricaClass/: admin.py  apps.py  models.py  views.py
FabricaClass/migrations/: 0001_initial.py  0002_rename_nome_turma_legenda_turma_ano_letivo_and_more.py  0003_alter_turma_curso.py  0004_formulario_respostas.py  0005_criterios_pergunta_formulario_pergunta.py
FabricaClass/models/: __init__.py  criterios.py  curso.py  formulario.py  pergunta.py  respostas.py  turma.py
FabricaClass/serializers/: __init__.py  criterios.py  curso.py  formulario.py  pergunta.py  respostas.py  turma.py
FabricaClass/utils/: email.html  envioEmail.py  pieGraph.py
FabricaClass/views/: __init__.py  criterios.py  curso.py  formulario.py  pergunta.py  respostas.py  turma.py
core/: settings.py  urls.py
usuario/: admin.py  apps.py  cadastro.py  login.py  models.py  newPassword.py  router.py  serializer.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_remove_usuario_cpf_remove_usuario_data_nascimento_and_more.py  0003_remove_professor_groups_and_more.py  0004_usuario_password_reset_token_and_more.py  0005_alter_usuario_password_reset_token.py
usuario/models/: Usuario.py
usuario/serializers/: __init.py__.py  aluno.py  professor.py
usuario/utils/: cadastro.py  login.py  newPassword.py
usuario/views/: __init__.py  aluno.py  professor.py
